# quickignore

./: .gitignore  CMakeLists.txt  args.c  main.c  slicing.c
include/: args.h  requests.h  slicing.h
src/: args.c  main.c  requests.c  slicing.c
